--- a/header.html
+++ b/header.html
@@ -65,6 +65,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="#">CAROLO EXPRESS</a>
+            <a class="dropdown-item" href="#">CAROLO PIQUE-NIQUE</a>
             <a class="dropdown-item" href="#">CAROLO WARRIOR</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">CAROLO CUISINE</a>
