--- a/index.html
+++ b/index.html
@@ -26,33 +26,181 @@
     <!--/////////////////////SECTION PRESENTATION///////////////////////-->
 
     <section class=presentation>
-        <div class="card mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="img/01.jpg" class="card-img" alt="La rentrée des étudiants - Qu'est-ce que c'est? ">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Qu'est-ce que c'est?</h5>
-                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam vitae
-                            interdum mi. Proin semper vel turpis sed tempus. Vivamus sollicitudin diam ut dolor iaculis,
-                            in dignissim quam scelerisque. Vivamus ut ex pellentesque, iaculis ipsum varius, consequat
-                            erat. Morbi vulputate magna purus, a efficitur justo vestibulum sit amet. Donec viverra id
-                            felis eget accumsan. Aliquam sit amet cursus nisl. Aenean eu luctus tellus. Morbi imperdiet
-                            nulla in mauris dignissim, eget maximus dolor tempus. Quisque rutrum sem at turpis pharetra
-                            imperdiet.
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="img/01.jpg" class="card-img"
+                                    alt="La rentrée des étudiants - Qu'est-ce que c'est? ">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Qu'est-ce que c'est?</h5>
+                                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                                        vitae
+                                        interdum mi. Proin semper vel turpis sed tempus. Vivamus sollicitudin diam ut
+                                        dolor iaculis,
+                                        in dignissim quam scelerisque. Vivamus ut ex pellentesque, iaculis ipsum varius,
+                                        consequat
+                                        erat. Morbi vulputate magna purus, a efficitur justo vestibulum sit amet. Donec
+                                        viverra id
+                                        felis eget accumsan. Aliquam sit amet cursus nisl. Aenean eu luctus tellus.
+                                        Morbi imperdiet
+                                        nulla in mauris dignissim, eget maximus dolor tempus. Quisque rutrum sem at
+                                        turpis pharetra
+                                        imperdiet.
 
-                            Nam pretium enim vel est bibendum luctus. Maecenas porttitor ultrices massa ut fermentum.
-                            Aliquam feugiat urna et semper posuere. Sed mollis, orci non lobortis sodales, nibh justo
-                            sollicitudin enim, quis accumsan ex velit aliquam purus. Donec non magna sit amet dui
-                            ultricies sodales sit amet eget dui. Integer faucibus malesuada placerat. Donec ullamcorper
-                            laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis nec nisl.
-                            Morbi iaculis augue sed malesuada blandit. </p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        Nam pretium enim vel est bibendum luctus. Maecenas porttitor ultrices massa ut
+                                        fermentum.
+                                        Aliquam feugiat urna et semper posuere. Sed mollis, orci non lobortis sodales,
+                                        nibh justo
+                                        sollicitudin enim, quis accumsan ex velit aliquam purus. Donec non magna sit
+                                        amet dui
+                                        ultricies sodales sit amet eget dui. Integer faucibus malesuada placerat. Donec
+                                        ullamcorper
+                                        laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
+                                        nec nisl.
+                                        Morbi iaculis augue sed malesuada blandit. </p>
+                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                <div class="carousel-item">
+                    <div class="card mb-3">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <img src="img/02.jpg" class="card-img"
+                                    alt="La rentrée des étudiants - C'est pour qui? ">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">C'est pour qui?</h5>
+                                    <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                                        vitae
+                                        interdum mi. Proin semper vel turpis sed tempus. Vivamus sollicitudin diam ut
+                                        dolor iaculis,
+                                        in dignissim quam scelerisque. Vivamus ut ex pellentesque, iaculis ipsum varius,
+                                        consequat
+                                        erat. Morbi vulputate magna purus, a efficitur justo vestibulum sit amet. Donec
+                                        viverra id
+                                        felis eget accumsan. Aliquam sit amet cursus nisl. Aenean eu luctus tellus.
+                                        Morbi imperdiet
+                                        nulla in mauris dignissim, eget maximus dolor tempus. Quisque rutrum sem at
+                                        turpis pharetra
+                                        imperdiet.
+
+                                        Nam pretium enim vel est bibendum luctus. Maecenas porttitor ultrices massa ut
+                                        fermentum.
+                                        Aliquam feugiat urna et semper posuere. Sed mollis, orci non lobortis sodales,
+                                        nibh justo
+                                        sollicitudin enim, quis accumsan ex velit aliquam purus. Donec non magna sit
+                                        amet dui
+                                        ultricies sodales sit amet eget dui. Integer faucibus malesuada placerat. Donec
+                                        ullamcorper
+                                        laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
+                                        nec nisl.
+                                        Morbi iaculis augue sed malesuada blandit. </p>
+                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                        <div class="card mb-3">
+                            <div class="row no-gutters">
+                                <div class="col-md-4">
+                                    <img src="img/03.jpg" class="card-img"
+                                        alt="La rentrée des étudiants - C'est quand? ">
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="card-body">
+                                        <h5 class="card-title">C'est quand?</h5>
+                                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                                            vitae
+                                            interdum mi. Proin semper vel turpis sed tempus. Vivamus sollicitudin diam ut
+                                            dolor iaculis,
+                                            in dignissim quam scelerisque. Vivamus ut ex pellentesque, iaculis ipsum varius,
+                                            consequat
+                                            erat. Morbi vulputate magna purus, a efficitur justo vestibulum sit amet. Donec
+                                            viverra id
+                                            felis eget accumsan. Aliquam sit amet cursus nisl. Aenean eu luctus tellus.
+                                            Morbi imperdiet
+                                            nulla in mauris dignissim, eget maximus dolor tempus. Quisque rutrum sem at
+                                            turpis pharetra
+                                            imperdiet.
+    
+                                            Nam pretium enim vel est bibendum luctus. Maecenas porttitor ultrices massa ut
+                                            fermentum.
+                                            Aliquam feugiat urna et semper posuere. Sed mollis, orci non lobortis sodales,
+                                            nibh justo
+                                            sollicitudin enim, quis accumsan ex velit aliquam purus. Donec non magna sit
+                                            amet dui
+                                            ultricies sodales sit amet eget dui. Integer faucibus malesuada placerat. Donec
+                                            ullamcorper
+                                            laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
+                                            nec nisl.
+                                            Morbi iaculis augue sed malesuada blandit. </p>
+                                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                            <div class="card mb-3">
+                                <div class="row no-gutters">
+                                    <div class="col-md-4">
+                                        <img src="img/04.jpg" class="card-img"
+                                            alt="La rentrée des étudiants - C'est où? ">
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="card-body">
+                                            <h5 class="card-title">C'est où?</h5>
+                                            <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                                                vitae
+                                                interdum mi. Proin semper vel turpis sed tempus. Vivamus sollicitudin diam ut
+                                                dolor iaculis,
+                                                in dignissim quam scelerisque. Vivamus ut ex pellentesque, iaculis ipsum varius,
+                                                consequat
+                                                erat. Morbi vulputate magna purus, a efficitur justo vestibulum sit amet. Donec
+                                                viverra id
+                                                felis eget accumsan. Aliquam sit amet cursus nisl. Aenean eu luctus tellus.
+                                                Morbi imperdiet
+                                                nulla in mauris dignissim, eget maximus dolor tempus. Quisque rutrum sem at
+                                                turpis pharetra
+                                                imperdiet.
+        
+                                                Nam pretium enim vel est bibendum luctus. Maecenas porttitor ultrices massa ut
+                                                fermentum.
+                                                Aliquam feugiat urna et semper posuere. Sed mollis, orci non lobortis sodales,
+                                                nibh justo
+                                                sollicitudin enim, quis accumsan ex velit aliquam purus. Donec non magna sit
+                                                amet dui
+                                                ultricies sodales sit amet eget dui. Integer faucibus malesuada placerat. Donec
+                                                ullamcorper
+                                                laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
+                                                nec nisl.
+                                                Morbi iaculis augue sed malesuada blandit. </p>
+                                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
             </div>
-        </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
     </section>
 
 
