--- a/formulaire.html
+++ b/formulaire.html
@@ -78,32 +78,32 @@
 
         <form action="/ma-page-de-formulaire" method="post">
             <div>
-                <label for="name">Nom</label>
+                <label for="name"><strong>Nom :</strong></label>
                 <input type="text" id="name" name="Votre noms">
             </div>
         </br>
             <div>
-                    <label for="name">Prénom</label>
+                    <label for="name"><strong>Prénom :</strong></label>
                     <input type="text" id="surname" name="Votre prénom">
                 </div>
             </br>
                 <div>
-                        <label for="name">Mobile</label>
+                        <label for="name"><strong>Mobile :</strong></label>
                         <input type="text" id="name" name="Votre téléphone mobile">
                     </div>
                 </br>
             <div>
-                <label for="mail">e-mail</label>
+                <label for="mail"><strong>E-mail :</strong></label>
                 <input type="email" id="mail" name="votre email">
             </div>
         </br>
             <div>
-                <label for="name">Repas=2,5€</label>
+                <label for="name"><strong>Repas=2,5€</strong></label>
                 <input id="reserve" name="reservation repas"></input>
             </div>
             <div class="button">
-                    <button type="submit">Réserver le repas</button>
-                </div>
+                <button type="button" class="btn btn-light"><strong>Réserver le repas</strong></button>
+            </div>        
 
         </form></br></br>
 
