mise en place section témoignages

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!--/////////////////////SECTION PRESENTATION///////////////////////-->
 
     <section class=presentation>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div id="carouselPresentation" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card mb-3">
@@ -104,7 +104,6 @@
                                         laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
                                         nec nisl.
                                         Morbi iaculis augue sed malesuada blandit. </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +144,6 @@
                                         laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
                                         nec nisl.
                                         Morbi iaculis augue sed malesuada blandit. </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +183,6 @@
                                         laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
                                         nec nisl.
                                         Morbi iaculis augue sed malesuada blandit. </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
                         </div>
@@ -225,18 +222,18 @@
                                         laoreet faucibus. Pellentesque risus nisi, porttitor nec posuere eget, sagittis
                                         nec nisl.
                                         Morbi iaculis augue sed malesuada blandit. </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#carouselPresentation" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <a class="carousel-control-next" href="#carouselPresentation" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
@@ -518,36 +515,63 @@
 
     <!--/////////////////////TEMOIGNAGES///////////////////////-->
 
-    <section class=temoignage>
-        <h1>VOS TEMOIGNAGES</h1>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <section class=temoignages>
+        <div id="carouselTemoignages" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <p>"Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
-                    richardson ad
-                    squid."</p>
-                    <p class="card-text"><small class="text-muted">Benoit</small></p>
-              </div>
-              <div class="carousel-item">
-                <p>"3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
-                    quinoa"</p>
-                    <p class="card-text"><small class="text-muted">Romain</small></p>
-              </div>
-              <div class="carousel-item">
-                <p>"wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice
-                    lomo."</p>
-                    <p class="card-text"><small class="text-muted">Jacqueline</small></p>
-              </div>
+                <div class="carousel-item active">
+                    <div class="card mb-4">
+                        <div class="row no-gutters">
+                            <div class="col-md-12">
+                                <div class="card-body">
+                                    <p class="card-text"> "Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Etiam
+                                        vitae
+                                        interdum mi."" </p>
+                                    <p class="card-text"><small class="text-muted">Romain</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card mb-4">
+                        <div class="row no-gutters">
+                            <div class="col-md-12">
+                                <div class="card-body align-items-center">
+                                    <p class="card-text"> "Proin semper vel turpis sed tempus. Vivamus sollicitudin diam
+                                        ut
+                                        dolor iaculis,
+                                        in dignissim quam scelerisque."</p>
+                                    <p class="card-text"><small class="text-muted">Benoit</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="card mb-4">
+                        <div class="row no-gutters">
+                            <div class="col-md-12">
+                                <div class="card-body">
+                                    <p class="card-text"> "Morbi vulputate magna purus, a efficitur justo vestibulum sit
+                                        amet. Donec
+                                        viverra id
+                                        felis eget accumsan."</p>
+                                    <p class="card-text"><small class="text-muted">Micheline</small></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
+            <a class="carousel-control-prev" href="#carouselTemoignages" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
             </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
+            <a class="carousel-control-next" href="#carouselTemoignages" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
             </a>
-          </div>
     </section>
 
 
@@ -555,7 +579,7 @@
 
     <!--/////////////////////FOOTER///////////////////////-->
 
-    <section class=footer>FOOTER</section>
+    <!--<section class=footer>FOOTER</section>-->
 
 
 
