--- a/footer.html
+++ b/footer.html
@@ -150,7 +150,12 @@
 
   </div>
   <!-- Footer Elements -->
+ <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Add font awesome icons -->
+<a href="#"><i class="fab fa-facebook"></i></a>
+<a href="#"><i class="fab fa-twitter-square"></i></a>
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2019 G.Ponsard & J.Collart Copyright:
     <a href="https://mdbootstrap.com/education/bootstrap/">A VENIR </a>
